<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="default_notification_channel_id">default_notification_channel_id</string>

    <string name="title_friend">친구</string>
    <string name="title_chat">채팅</string>
    <string name="title_more">더보기</string>
    <string name="title_search_friend">이메일로 친구 찾기</string>
    <string name="action_edit_profile">완료</string>

    <string name="label_chat">1:1 채팅</string>
    <string name="label_chat_alone">나와의 채팅</string>
    <string name="label_edit_profile">프로필 수정</string>
    <string name="label_friend_email">친구 이메일 주소</string>
    <string name="label_button_friend_add">친구 추가</string>
    <string name="label_edit_name">이름</string>
    <string name="label_edit_status_message">상태 메세지</string>
    <string name="label_edit_phone_number">전화번호</string>
    <string name="label_edit_email">이메일</string>

    <string name="message_login_success">로그인 성공</string>
    <string name="message_sign_up_success">회원가입 성공</string>

    <string name="message_title_friend_not_found">사용자를 찾을 수 없습니다.</string>
    <string name="message_content_friend_not_found">사용자 이메일을 다시 확인해 주세요. </string>
    <string name="message_cant_add_friend">사용자를 추가할 수 없습니다.</string>
    <string name="message_cant_add_friend_info">자신의 계정은 친구로 추가할 수 없습니다.</string>

    <string name="dummy_string">Dummy</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id">2222495038067252</string>
    <string name="fb_login_protocol_scheme">fb2222495038067252</string>

    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>

    <string name="github_client_id" translatable="false">YOUR_CLIENT_ID</string>
    <string name="github_client_secret" translatable="false">YOUR_CLIENT_SECRET</string>

</resources>
