<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendSearchActivity"
    android:background="@color/colorLightGray">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?android:attr/windowBackground"
        android:minHeight="?attr/actionBarSize">

    </android.support.v7.widget.Toolbar>
    <TextView
        android:id="@+id/label_friend_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/label_friend_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:padding="8dp"
        android:paddingStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/label_friend_email"
        android:background="?android:attr/windowBackground"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:imeOptions="actionSearch"
        />
    <ImageButton
        android:id="@+id/button_cancel_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close"
        android:layout_marginEnd="8dp"
        android:tint="@android:color/darker_gray"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@id/edit_email"
        app:layout_constraintBottom_toBottomOf="@id/edit_email"
        app:layout_constraintEnd_toEndOf="@id/edit_email"/>
    <LinearLayout
        android:id="@+id/layout_friend_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_title_friend_not_found"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_content_friend_not_found"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="48dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/shape_circle"
            android:src="@drawable/img_default_profile"
            android:layout_gravity="center"
            android:scaleType="fitXY"/>
        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_string"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <Button
            android:id="@+id/button_friend_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/label_button_friend_add"
            android:backgroundTint="@color/colorAccent"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>