<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        tools:context=".ProfileEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:minHeight="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/dummy_string"
        android:scaleType="centerCrop"
        android:src="@color/colorAccent"
        android:tint="#30000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
    <TextView
        android:id="@+id/text_status_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:text="@string/dummy_string"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_cover" />
    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />


    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/shape_circle"
        android:contentDescription="@string/dummy_string"
        android:scaleType="fitXY"
        android:src="@drawable/img_default_profile"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:layout_constraintVertical_bias="0.1" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        >
        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="8dp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:hint="@string/label_edit_name"
            android:text="@string/dummy_string"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_edit_status_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_name"
        >
        <EditText
            android:id="@+id/edit_status_message"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="8dp"
            android:singleLine="true"
            android:gravity="center_vertical"
            android:hint="@string/label_edit_status_message"
            android:text="@string/dummy_string"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_edit_status_message"
        >
        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingStart="8dp"
            android:enabled="false"
            android:gravity="center_vertical"
            android:hint="@string/label_edit_email"
            android:text="@string/dummy_string"/>
    </android.support.design.widget.TextInputLayout>



</android.support.constraint.ConstraintLayout>