<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profileLayout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendDetailActivity">

    <android.support.constraint.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.666" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.63" />

    <ImageView
        android:id="@+id/image_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/dummy_string"
        android:scaleType="centerCrop"
        android:tint="#50000000"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@color/colorAccent" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="112dp"
        android:layout_height="112dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:adjustViewBounds="true"
        android:background="@drawable/shape_circle"
        android:contentDescription="@string/dummy_string"
        android:scaleType="fitXY"
        android:src="@drawable/img_default_profile"
        app:layout_constraintBottom_toBottomOf="@id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline2"
        app:layout_constraintVertical_bias="0.1" />

    <ImageButton
        android:id="@+id/button_chat"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        app:layout_goneMarginEnd="0dp"
        android:contentDescription="@string/dummy_string"
        android:background="@drawable/shape_circle"
        android:backgroundTint="@color/colorLightGray"
        android:foreground="@drawable/ripple_circle"
        app:layout_constraintBottom_toTopOf="@+id/label_chat"
        app:layout_constraintEnd_toStartOf="@+id/button_edit_profile"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_menu_chat" />

    <ImageButton
        android:id="@+id/button_edit_profile"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/dummy_string"
        android:visibility="visible"
        android:background="@drawable/shape_circle"
        android:foreground="@drawable/ripple_circle"
        android:backgroundTint="@color/colorLightGray"
        app:layout_constraintBottom_toTopOf="@+id/label_edit_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_chat"
        app:srcCompat="@drawable/ic_edit" />

    <TextView
        android:id="@+id/label_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/label_chat_alone"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_chat"
        app:layout_constraintStart_toStartOf="@+id/button_chat" />

    <TextView
        android:id="@+id/label_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/label_edit_profile"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/button_edit_profile"
        app:layout_constraintStart_toStartOf="@+id/button_edit_profile" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/dummy_string"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_profile" />
    <TextView
        android:id="@+id/text_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/dummy_string"
        android:textSize="12sp"
        android:padding="4dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@android:color/darker_gray"
        android:background="@drawable/shape_round"
        app:layout_constraintTop_toBottomOf="@id/text_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/profileStatusMessage"
        android:layout_width="0dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:maxLines="2"
        android:ellipsize="end"
        android:text="@string/dummy_string"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_cover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/image_cover" />

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:tint="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_close"
        />

</android.support.constraint.ConstraintLayout>